# DOT-LMS-backend/storage/api-docs/api-docs.json
@@ -1416,6 +1416,47 @@
                 }
             }
         },
+        "/Teacher/DeleteAssignedCourse/{teacher_id}": {
+            "delete": {
+                "tags": [
+                    "Teacher"
+                ],
+                "summary": "Delete assigned courses for a teacher",
+                "description": "Returns a message that ensures the deletion of the assigned course",
+                "operationId": "f5f331fba3f5aefcd1fe63ee4b443cfa",
+                "parameters": [
+                    {
+                        "name": "teacher_id",
+                        "in": "path",
+                        "description": "Teacher's id",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        },
+                        "example": "TCH-6832"
+                    },
+                    {
+                        "name": "course_id",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful operation"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "500": {
+                        "description": "Server Error"
+                    }
+                }
+            }
+        },
         "/Login": {
             "post": {
                 "tags": [
@@ -1592,7 +1633,7 @@
                         "title": "exam_topic",
                         "description": "The topic's the exam focuses on",
                         "type": "string",
-                        "example": "Javascript,html,css,react"
+                        "example": "Javascript"
                     },
                     "course_id": {
                         "title": "course_id",
